<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorFondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.sieteymedia.acercaDe">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="139dp"
        android:fontFamily="serif"
        android:text="@string/textoAcercaDe"
        android:textAlignment="center"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="99dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/textoEdad"
        android:textAlignment="center"
        android:textColor="@color/colorTexto"
        android:textSize="16sp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        app:srcCompat="@drawable/pegi_3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/imageView3"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="65dp"
        android:fontFamily="serif"
        android:text="@string/Final"
        android:textAlignment="center"
        android:textColor="@color/colorTexto"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginLeft="150dp"
        android:layout_marginTop="400dp"
        app:srcCompat="@drawable/emoji" />
</RelativeLayout>
